Add content and bind to cart table

--- a/public/index.html
+++ b/public/index.html
@@ -49,23 +49,23 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Chaussure</a>
+          <a class="navbar-brand" href="#/">Chaussure</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Wish list(0)</a></li>
-            <li><a href="#">My account</a></li>
-            <li><a href="#">Checkout</a></li>
+            <li><a href="#/">Wish list(0)</a></li>
+            <li><a href="#/">My account</a></li>
+            <li><a href="#/">Checkout</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Select a language <span class="caret"></span></a>
+              <a href="#/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Select a language <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">French</a></li>
-                <li><a href="#">English</a></li>
-                <li><a href="#">Beast (if you're a dog)</a></li>
+                <li><a href="#/">French</a></li>
+                <li><a href="#/">English</a></li>
+                <li><a href="#/">Beast (if you're a dog)</a></li>
                 <li class="divider"></li>
-                <li><a href="#">I don't know how to read</a></li>
+                <li><a href="#/">I don't know how to read</a></li>
               </ul>
             </li>
           </ul>
@@ -73,12 +73,12 @@
           
           <li class="col-md-4">
             <img src="./img/phone.png" alt="Phone number" />
-            <a href="#">(08)34593452348</a> 
+            <a href="#/">(08)34593452348</a> 
             <span>Support en ligne</span>
           </li>   
           <li class="col-md-5">
             <img src="./img/account.png" alt="My account" />
-            <a href="#">MY ACCOUNT</a> 
+            <a href="#/">MY ACCOUNT</a> 
             <span>Welcome costumer (log in)</span>
           </li>
           <li class="col-md-3" id="cart" data-ng-controller="CartController">
@@ -94,14 +94,14 @@
   <!-- Menu principal -->
     <nav class="navbar" id="main-menu">
       <ul class="nav navbar-nav col-md-12">
-        <li><a href="#">Hers</a></li>
-        <li><a href="#">His</a></li>
-        <li><a href="#">Kids</a></li>
-        <li><a href="#">Trainers</a></li>
-        <li><a href="#">Accessories</a></li>
-        <li><a href="#">Brands</a></li>
-        <li><a href="#">Sale</a></li>
-        <li><a href="#">Dealers</a></li>
+        <li><a href="#/">Hers</a></li>
+        <li><a href="#/">His</a></li>
+        <li><a href="#/">Kids</a></li>
+        <li><a href="#/">Trainers</a></li>
+        <li><a href="#/">Accessories</a></li>
+        <li><a href="#/">Brands</a></li>
+        <li><a href="#/">Sale</a></li>
+        <li><a href="#/">Dealers</a></li>
         <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search entire store here">
@@ -115,14 +115,14 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav col-md-12">
           <li class="col-md-4" id="sale">
-            <a href="#">10% off for all students</a> 
+            <a href="#/">10% off for all students</a> 
           </li>
           <li class="col-md-4" id="delivery">
-            <a href="#">International delivery
+            <a href="#/">International delivery
             <span>From $5</span></a> 
           </li>
           <li class="col-md-4" id="returns">
-            <a href="#">Free returns
+            <a href="#/">Free returns
             <span>With collect+</span></a>
           </li>             
         </ul>
