--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
         <li><a href="#/">Hers</a></li>
         <li><a href="#/">His</a></li>
         <li><a href="#/">Kids</a></li>
-        <li><a href="#/">Rocking</a></li>
+        <li><a href="#/">Trainers</a></li>
         <li><a href="#/">Accessories</a></li>
         <li><a href="#/">Brands</a></li>
         <li><a href="#/">Sale</a></li>
